--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
   <img src="bx183133-SSeg5j1UrMDG.png" alt="Kanchigai no Atelier Meister" height="170">
   <pre><h4>To be hero x   apothecary...  Kanchigai n..</h4></pre>
   <hr>
+  <h4>Upcoming Anime</h4>
+  <br>
+  <img src="images (37).jpeg" alt="Dandadan"height="170">
+  <img height="170" src="images (38).jpeg" alt="Kaiju no.8">
+  <img height="166" src="images (39).jpeg" alt="Lord of Mysteries">
+  <pre><h4>DanDaDan       kaiju no.8    Lord of Mys...</h4></pre>
+  
   
   
 </body>
