--- a/index.html
+++ b/index.html
@@ -23,8 +23,23 @@
   <br>
   <img src="images (37).jpeg" alt="Dandadan"height="170">
   <img height="170" src="images (38).jpeg" alt="Kaiju no.8">
-  <img height="166" src="images (39).jpeg" alt="Lord of Mysteries">
-  <pre><h4>DanDaDan       kaiju no.8      Lord of Mys...</h4></pre>
+  <img height="161" src="images (39).jpeg" alt="Lord of Mysteries">
+  <pre><h4>DanDaDan       kaiju no.8    Lord of Mys...</h4></pre>
+  <hr>
+  
+  <h4>Top 10 anime (sorted by popularity)</h4>
+  
+  <a href="/more.html">more</a>
+  
+  <br>
+  <img src="images (36) (1).jpeg" alt="Attack on titan"height="170">
+  <img src="images (37).jpeg" alt="One piece"height="170">
+  <img src="images (38) (1).jpeg" alt="Attack on titan"height="170">
+  
+  <hr>
+  <img src="Screenshot_20250429_195543_CapCut~2.jpg" alt="dim black color" height="158" >
+  
+  
   
   
   
