--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   
   <h4>Top 10 anime (sorted by popularity)</h4>
   
-  <a href="/more.html">more</a>
+  <a href="more.html">more</a>
   
   <br>
   <img src="images (36) (1).jpeg" alt="Attack on titan"height="170">
