--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <hr>
   <h4>Upcoming Anime</h4>
   <br>
-  <img src="images (37).jpeg" alt="Dandadan"height="170">
+  <img src="Dandadan_Season_2_Key_Visual_2.png" alt="Dandadan"height="170">
   <img height="170" src="images (38).jpeg" alt="Kaiju no.8">
   <img height="161" src="images (39).jpeg" alt="Lord of Mysteries">
   <pre><h4>DanDaDan       kaiju no.8    Lord of Mys...</h4></pre>
