--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <img src="images (38) (1).jpeg" alt="Attack on titan"height="170">
   
   <hr>
-  <img src="Screenshot_20250429_195543_CapCut~2.jpg" alt="dim black color" height="158" >
+  <img src="Screenshot_20250430_195034_CapCut.jpg" alt="dim black color" height="168" >
   
   
   
