--- a/index.html
+++ b/index.html
@@ -9,40 +9,65 @@
 
 <body>
   <h4>Trending now 🔥</h4>
+  <table>
+    <tr>
+      <td><img src="bx21-ELSYx3yMPcKM.jpg" alt="One Piece" height="170"></td>
+      <td><img src="bx180367-GlRuB2lG7Kaa.jpg" alt="Witch Watch" height="170"></td>
+      <td><img src="bx167336-KpGIIBie71OX.png" alt="Lazarus" height="170"></td>
+    </tr>
+    <tr>
+      <td align="center"><h4>One Piece</h4></td>
+      <td align="center"><h4>Witch Watch</h4></td>
+      <td align="center"><h4>Lazarus</h4></td>
+    </tr>
+  </table>
+
   <br>
-  <img src="bx21-ELSYx3yMPcKM.jpg" alt="one piece"height="170">
-  <img src="bx180367-GlRuB2lG7Kaa.jpg" alt="Witch Watch"height="170">
-  <img src="bx167336-KpGIIBie71OX.png" alt="Lazarus"height="170">
-  <pre><h4>One Piece     witch watch    Lazarus</h4></pre>
-  <img src="images (36).jpeg" alt="To be Hero x"height=170>
-  <img src="bx176301-TIGmldLffQGX.jpg" alt="apothecary diaries "height=" 170">
-  <img src="bx183133-SSeg5j1UrMDG.png" alt="Kanchigai no Atelier Meister" height="170">
-  <pre><h4>To be hero x   apothecary...  Kanchigai n..</h4></pre>
+
+  <table>
+    <tr>
+      <td><img src="images (36).jpeg" alt="To be Hero x" height="170"></td>
+      <td><img src="bx176301-TIGmldLffQGX.jpg" alt="Apothecary Diaries" height="170"></td>
+      <td><img src="bx183133-SSeg5j1UrMDG.png" alt="Kanchigai no Atelier Meister" height="170"></td>
+    </tr>
+    <tr>
+      <td align="center"><h4>To be Hero x</h4></td>
+      <td align="center"><h4>Apothecary...</h4></td>
+      <td align="center"><h4>Kanchigai n..</h4></td>
+    </tr>
+  </table>
+
   <hr>
   <h4>Upcoming Anime</h4>
-  <br>
-  <img src="Dandadan_Season_2_Key_Visual_2.png" alt="Dandadan"height="170">
-  <img height="170" src="images (38).jpeg" alt="Kaiju no.8">
-  <img height="161" src="images (39).jpeg" alt="Lord of Mysteries">
-  <pre><h4>DanDaDan       kaiju no.8    Lord of Mys...</h4></pre>
+
+  <table>
+    <tr>
+      <td><img src="Dandadan_Season_2_Key_Visual_2.png" alt="Dandadan" height="170"></td>
+      <td><img src="images (38).jpeg" alt="Kaiju no.8"height="170"></td>
+      <td><img src="images (39).jpeg" alt="Lord of Mysteries" height="170"></td>
+    </tr>
+    <tr>
+      <td align="center"><h4>DanDaDan</h4></td>
+      <td align="center"><h4>Kaiju no.8</h4></td>
+      <td align="center"><h4>Lord of Mys...</h4></td>
+    </tr>
+  </table>
+
   <hr>
-  
   <h4>Top 10 anime (sorted by popularity)</h4>
-  
   <a href="more.html">more</a>
   
-  <br>
-  <img src="images (36) (1).jpeg" alt="Attack on titan"height="170">
-  <img src="images (37).jpeg" alt="One piece"height="170">
-  <img src="images (38) (1).jpeg" alt="Attack on titan"height="170">
-  
+  <table>
+    <tr>
+      <td><img src="images (36) (1).jpeg" alt="Attack on Titan" height="170"></td>
+      <td><img src="images (37).jpeg" alt="One Piece" height="170"></td>
+      <td><img src="images (38) (1).jpeg" alt="Attack on Titan" height="170"></td>
+    </tr>
+  </table>
+
   <hr>
-  <img src="Screenshot_20250430_195034_CapCut.jpg" alt="dim black color" height="168" >
-  
-  
-  
-  
-  
+  <img src="Screenshot_20250430_195034_CapCut.jpg" alt="dim black color" height="168">
+
 </body>
 
 </html>
