--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
   <title>AniRate</title>
 </head>
 
@@ -11,9 +12,9 @@
   <h4>Trending now 🔥</h4>
   <table>
     <tr>
-      <td><img src="bx21-ELSYx3yMPcKM.jpg" alt="One Piece" height="170"></td>
-      <td><img src="bx180367-GlRuB2lG7Kaa.jpg" alt="Witch Watch" height="170"></td>
-      <td><img src="bx167336-KpGIIBie71OX.png" alt="Lazarus" height="170"></td>
+      <td><img class="img" src="bx21-ELSYx3yMPcKM.jpg" alt="One Piece" height="170"></td>
+      <td><img class="img" src="bx180367-GlRuB2lG7Kaa.jpg" alt="Witch Watch" height="170"></td>
+      <td><img class="img" src="bx167336-KpGIIBie71OX.png" alt="Lazarus" height="170"></td>
     </tr>
     <tr>
       <td align="center"><h4>One Piece</h4></td>
@@ -26,9 +27,9 @@
 
   <table>
     <tr>
-      <td><img src="images (36).jpeg" alt="To be Hero x" height="170"></td>
-      <td><img src="bx176301-TIGmldLffQGX.jpg" alt="Apothecary Diaries" height="170"></td>
-      <td><img src="bx183133-SSeg5j1UrMDG.png" alt="Kanchigai no Atelier Meister" height="170"></td>
+      <td><img class="img" src="images (36).jpeg" alt="To be Hero x" height="170"></td>
+      <td><img class="img" src="bx176301-TIGmldLffQGX.jpg" alt="Apothecary Diaries" height="170"></td>
+      <td><img class="img" src="bx183133-SSeg5j1UrMDG.png" alt="Kanchigai no Atelier Meister" height="170"></td>
     </tr>
     <tr>
       <td align="center"><h4>To be Hero x</h4></td>
@@ -42,9 +43,9 @@
 
   <table>
     <tr>
-      <td><img src="Dandadan_Season_2_Key_Visual_2.png" alt="Dandadan" height="170"></td>
-      <td><img src="images (38).jpeg" alt="Kaiju no.8"height="170"></td>
-      <td><img src="images (39).jpeg" alt="Lord of Mysteries" height="170"></td>
+      <td><img class="img" src="Dandadan_Season_2_Key_Visual_2.png" alt="Dandadan" height="170"></td>
+      <td><img class="img" src="images (38).jpeg" alt="Kaiju no.8"height="170"></td>
+      <td><img class="img" src="images (39).jpeg" alt="Lord of Mysteries" height="170"></td>
     </tr>
     <tr>
       <td align="center"><h4>DanDaDan</h4></td>
@@ -55,18 +56,21 @@
 
   <hr>
   <h4>Top 10 anime (sorted by popularity)</h4>
-  <a href="more.html">more</a>
+  <div id="a1">
+  <a  href="more.html">more</a>
+  </div>
   
   <table>
     <tr>
-      <td><img src="images (36) (1).jpeg" alt="Attack on Titan" height="170"></td>
-      <td><img src="images (37).jpeg" alt="One Piece" height="170"></td>
-      <td><img src="images (38) (1).jpeg" alt="Attack on Titan" height="170"></td>
+      <td><img class="img" src="images (36) (1).jpeg" alt="Attack on Titan" height="170"></td>
+      <td><img class="img" src="images (37).jpeg" alt="One Piece" height="170"></td>
+      <td><img class="img" src="images (38) (1).jpeg" alt="Attack on Titan" height="170"></td>
     </tr>
   </table>
 
   <hr>
   <img src="Screenshot_20250430_195034_CapCut.jpg" alt="dim black color" height="168">
+
 
 </body>
 
