--- a/index.html
+++ b/index.html
@@ -67,9 +67,12 @@
       <td><img class="img" src="images (38) (1).jpeg" alt="Attack on Titan" height="170"></td>
     </tr>
   </table>
-
+  <hr>
+<a href="/animemovie.html"> Watch Anime Movie </a>
   <hr>
   <img src="Screenshot_20250430_195034_CapCut.jpg" alt="dim black color" height="168">
+  
+ 
 
 
 </body>
