--- a/animemovie.html
+++ b/animemovie.html
@@ -11,9 +11,9 @@
 <body>
 
 <h3 >Your Name</h3>
-<a href="/yournamehindi.html">Hindi Dub</a>
+<a href="yournamehindi.html">Hindi Dub</a>
 <br>
-<a href="/yournameeng.html">English Dub</a>
+<a href="yournameeng.html">English Dub</a>
 
 </body>
 
