--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <hr>
   <h4>Top 10 anime (sorted by popularity)</h4>
   <div id="a1">
-  <a  href="more.html">more</a>
+  <a class="c1"  href="more.html">more</a>
   </div>
   
   <table>
@@ -68,7 +68,7 @@
     </tr>
   </table>
   <hr>
-<a href="animemovie.html"> Watch Anime Movie </a>
+<a class="c1" href="/animemovie.html"> Watch Anime Movie </a>
   <hr>
   <img src="Screenshot_20250430_195034_CapCut.jpg" alt="dim black color" height="168">
   
