--- a/animemovie.html
+++ b/animemovie.html
@@ -4,16 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+  <title>Anime Movie - Hindi and english dub</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
 <h3 >Your Name</h3>
-<a href="yournamehindi.html">Hindi Dub</a>
+<a class="c1" href="yournamehindi.html">Hindi Dub</a>
 <br>
-<a href="yournameeng.html">English Dub</a>
+<a class="c1" href="yournameeng.html">English Dub</a>
 
 </body>
 
