--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </tr>
   </table>
   <hr>
-<a class="c1" href="/animemovie.html"> Watch Anime Movie </a>
+<a class="c1" href="animemovie.html"> Watch Anime Movie </a>
   <hr>
   <img src="Screenshot_20250430_195034_CapCut.jpg" alt="dim black color" height="168">
   
