--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
+  <script data-goatcounter="https://yourid.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
   <title>AniRate</title>
+  
 </head>
 
 <body>
   <h4>Trending now 🔥</h4>
-  <table>
+  <table class="name">
     <tr>
-      <td><img class="img" src="bx21-ELSYx3yMPcKM.jpg" alt="One Piece" height="170"></td>
+      <td ><img class="img" src="bx21-ELSYx3yMPcKM.jpg" alt="One Piece" height="170"></td>
       <td><img class="img" src="bx180367-GlRuB2lG7Kaa.jpg" alt="Witch Watch" height="170"></td>
       <td><img class="img" src="bx167336-KpGIIBie71OX.png" alt="Lazarus" height="170"></td>
     </tr>
     <tr>
-      <td align="center"><h4>One Piece</h4></td>
+      <td align="center"  ><h4>One Piece</h4></td>
       <td align="center"><h4>Witch Watch</h4></td>
       <td align="center"><h4>Lazarus</h4></td>
     </tr>
@@ -25,7 +28,7 @@
 
   <br>
 
-  <table>
+  <table class="name">
     <tr>
       <td><img class="img" src="images (36).jpeg" alt="To be Hero x" height="170"></td>
       <td><img class="img" src="bx176301-TIGmldLffQGX.jpg" alt="Apothecary Diaries" height="170"></td>
@@ -41,7 +44,7 @@
   <hr>
   <h4>Upcoming Anime</h4>
 
-  <table>
+  <table class="name" >
     <tr>
       <td><img class="img" src="Dandadan_Season_2_Key_Visual_2.png" alt="Dandadan" height="170"></td>
       <td><img class="img" src="images (38).jpeg" alt="Kaiju no.8"height="170"></td>
@@ -60,7 +63,7 @@
   <a class="c1"  href="more.html">more</a>
   </div>
   
-  <table>
+  <table class="name">
     <tr>
       <td><img class="img" src="images (36) (1).jpeg" alt="Attack on Titan" height="170"></td>
       <td><img class="img" src="images (37).jpeg" alt="One Piece" height="170"></td>
