--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
   <h4>Trending now 🔥</h4>
   <table class="name">
     <tr>
-      <td ><img class="img" src="bx21-ELSYx3yMPcKM.jpg" alt="One Piece" height="170"></td>
-      <td><img class="img" src="bx180367-GlRuB2lG7Kaa.jpg" alt="Witch Watch" height="170"></td>
-      <td><img class="img" src="bx167336-KpGIIBie71OX.png" alt="Lazarus" height="170"></td>
+      <td><img class="img" src="bx21-ELSYx3yMPcKM.jpg" alt="One Piece" height="170" loading="lazy"></td>
+<td><img class="img" src="bx180367-GlRuB2lG7Kaa.jpg" alt="Witch Watch" height="170" loading="lazy"></td>
+<td><img class="img" src="bx167336-KpGIIBie71OX.png" alt="Lazarus" height="170" loading="lazy"></td>
+
     </tr>
     <tr>
       <td align="center"  ><h4>One Piece</h4></td>
@@ -30,9 +31,10 @@
 
   <table class="name">
     <tr>
-      <td><img class="img" src="images (36).jpeg" alt="To be Hero x" height="170"></td>
-      <td><img class="img" src="bx176301-TIGmldLffQGX.jpg" alt="Apothecary Diaries" height="170"></td>
-      <td><img class="img" src="bx183133-SSeg5j1UrMDG.png" alt="Kanchigai no Atelier Meister" height="170"></td>
+     <td><img class="img" src="images (36).jpeg" alt="To be Hero x" height="170" loading="lazy"></td>
+<td><img class="img" src="bx176301-TIGmldLffQGX.jpg" alt="Apothecary Diaries" height="170" loading="lazy"></td>
+<td><img class="img" src="bx183133-SSeg5j1UrMDG.png" alt="Kanchigai no Atelier Meister" height="170" loading="lazy"></td>
+
     </tr>
     <tr>
       <td align="center"><h4>To be Hero x</h4></td>
@@ -46,9 +48,10 @@
 
   <table class="name" >
     <tr>
-      <td><img class="img" src="Dandadan_Season_2_Key_Visual_2.png" alt="Dandadan" height="170"></td>
-      <td><img class="img" src="images (38).jpeg" alt="Kaiju no.8"height="170"></td>
-      <td><img class="img" src="images (39).jpeg" alt="Lord of Mysteries" height="170"></td>
+<td><img class="img" src="Dandadan_Season_2_Key_Visual_2.png" alt="Dandadan" height="170" loading="lazy"></td>
+<td><img class="img" src="images (38).jpeg" alt="Kaiju no.8" height="170" loading="lazy"></td>
+<td><img class="img" src="images (39).jpeg" alt="Lord of Mysteries" height="170" loading="lazy"></td>
+
     </tr>
     <tr>
       <td align="center"><h4>DanDaDan</h4></td>
@@ -65,15 +68,16 @@
   
   <table class="name">
     <tr>
-      <td><img class="img" src="images (36) (1).jpeg" alt="Attack on Titan" height="170"></td>
-      <td><img class="img" src="images (37).jpeg" alt="One Piece" height="170"></td>
-      <td><img class="img" src="images (38) (1).jpeg" alt="Attack on Titan" height="170"></td>
+     <td><img class="img" src="images (36) (1).jpeg" alt="Attack on Titan" height="170" loading="lazy"></td>
+<td><img class="img" src="images (37).jpeg" alt="One Piece" height="170" loading="lazy"></td>
+<td><img class="img" src="images (38) (1).jpeg" alt="Attack on Titan" height="170" loading="lazy"></td>
+
     </tr>
   </table>
   <hr>
 <a class="c1" href="animemovie.html"> Watch Anime Movie </a>
   <hr>
-  <img src="Screenshot_20250430_195034_CapCut.jpg" alt="dim black color" height="168">
+  <img src="Screenshot_20250430_195034_CapCut.jpg" alt="dim black color" height="168" loading="lazy">
   
  
 
