--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css">
-  <script data-goatcounter="https://yourid.goatcounter.com/count"
-        async src="//gc.zgo.at/count.js"></script>
-  <title>AniRate</title>
   
+  <meta name="description" content="AniRate is your go-to site for trending, upcoming, and top-rated anime updates.">
+  <meta name="keywords" content="anime, top anime, upcoming anime, trending anime, AniRate, watch anime">
+  <meta name="author" content="Nafi">
+
+  <meta property="og:title" content="AniRate - Watch Trending Anime Online">
+  <meta property="og:description" content="Watch trending and upcoming anime right on AniRate!">
+  <meta property="og:image" content="https://nafi-web-dev.github.io/AniRate/cover-image.jpg">
+  <meta property="og:url" content="https://nafi-web-dev.github.io/AniRate/">
+  <meta property="og:type" content="website">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="AniRate - Watch Anime Now">
+  <meta name="twitter:description" content="Stream trending anime episodes online, right from your browser.">
+  <meta name="twitter:image" content="https://nafi-web-dev.github.io/AniRate/cover-image.jpg">
+
+  <link rel="stylesheet" href="style.css">
+  <title>AniRate - Watch Anime Now</title>
 </head>
 
 <body>
