--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
 </head>
 
 <body>
+ 
+<div id="nevbar">
+    <img id="AniRate" src="1000008316_prev_ui.png"
+    alt="AniRate" height="50">
+    <pre>  </pre>
+    <a class="xyz" href="animemovie.html">Anime</a>
+    <a class="xyz" href="index.html">Home</a>
+    </div>
+    
+
   <h4>Trending now 🔥</h4>
   <table class="name">
     <tr>
@@ -75,7 +85,7 @@
   <hr>
   <h4>Top 10 anime (sorted by popularity)</h4>
   <div id="a1">
-  <a class="c1"  href="more.html">more</a>
+  <a class="c1" id="more2" href="more.html">more</a>
   </div>
   
   <table class="name">
