--- a/anime.html
+++ b/anime.html
@@ -9,6 +9,13 @@
 </head>
 
 <body>
+  <div id="nevbar">
+    <img id="AniRate" src="1000008316_prev_ui.png"
+    alt="AniRate" height="50">
+    <pre>  </pre>
+    <a class="xyz" href="animemovie.html">Anime</a>
+    <a class="xyz" href="index.html">Home</a>
+    </div>
 
 <h3 >Your Name</h3>
 <a class="c1" href="yournamehindi.html">Hindi Dub</a>
