--- a/anime.html
+++ b/anime.html
@@ -17,7 +17,8 @@
     <a class="xyz" href="index.html">Home</a>
     </div>
 
-<h3 >Your Name</h3>
+<img class="img" src="images (40) (2).jpeg" alt="Your Name" height="170">
+<br>
 <a class="c1" href="yournamehindi.html">Hindi Dub</a>
 <br>
 <a class="c1" href="yournameeng.html">English Dub</a>
