--- a/anime.html
+++ b/anime.html
@@ -19,6 +19,7 @@
 
 <img class="img" src="images (40) (2).jpeg" alt="Your Name" height="170">
 <br>
+  <h4>Your Name</h4>
 <a class="c1" href="yournamehindi.html">Hindi Dub</a>
 <br>
 <a class="c1" href="yournameeng.html">English Dub</a>
