--- a/anime.html
+++ b/anime.html
@@ -19,7 +19,8 @@
 
 <img class="img" src="images (40) (2).jpeg" alt="Your Name" height="170">
 <br>
-  <h4>Your Name</h4>
+<h4 style="display: initial;">Your Name</h4>
+<br>
 <a class="c1" href="yournamehindi.html">Hindi Dub</a>
 <br>
 <a class="c1" href="yournameeng.html">English Dub</a>
