--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <img id="AniRate" src="1000008316_prev_ui.png"
     alt="AniRate" height="50">
     <pre>  </pre>
-    <a class="xyz" href="anime.html">Anime</a>
-    <a class="xyz" href="index.html">Home</a>
+    <a class="xyz" class="c1" href="anime.html">Anime</a>
+    <a class="xyz" class="c1" href="index.html">Home</a>
     </div>
     
 
@@ -97,7 +97,7 @@
     </tr>
   </table>
   <hr>
-<a class="c1" href="animemovie.html"> Watch Anime Movie </a>
+<a class="c1" href="anime.html"> Watch Anime </a>
   <hr>
   <img src="Screenshot_20250430_195034_CapCut.jpg" alt="dim black color" height="168" loading="lazy">
   
