--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <pre>  </pre>
     <a class="xyz" class="c1" href="anime.html">Anime</a>
     <a class="xyz" class="c1" href="index.html">Home</a>
-    </div>
+    </div>  
     
-
+<hr class="hr">
   <h4>Trending now 🔥</h4>
   <table class="name">
     <tr>
