--- a/anime.html
+++ b/anime.html
@@ -16,6 +16,8 @@
     <a class="xyz" href="animemovie.html">Anime</a>
     <a class="xyz" href="index.html">Home</a>
     </div>
+    <hr class="hr">
+    <br>
 
 <img class="img" src="images (40) (2).jpeg" alt="Your Name" height="170">
 <br>
