--- a/anime.html
+++ b/anime.html
@@ -10,23 +10,40 @@
 
 <body>
   <div id="nevbar">
-    <img id="AniRate" src="1000008316_prev_ui.png"
-    alt="AniRate" height="50">
+    <img id="AniRate" src="1000008316_prev_ui.png" alt="AniRate" height="50">
     <pre>  </pre>
     <a class="xyz" href="animemovie.html">Anime</a>
     <a class="xyz" href="index.html">Home</a>
-    </div>
-    <hr class="hr">
-    <br>
+  </div>
 
-<img class="img" src="images (40) (2).jpeg" alt="Your Name" height="170">
-<br>
-<h4 style="display: initial;">Your Name</h4>
-<br>
-<a class="c1" href="yournamehindi.html">Hindi Dub</a>
-<br>
-<a class="c1" href="yournameeng.html">English Dub</a>
+  <hr class="hr">
+  <br>
 
+ <table>
+  <tr>
+    <td>
+      <div style="text-align: center;">
+        <img class="img" src="images (40) (2).jpeg" alt="Your Name" height="170"><br>
+        <h4>Your Name</h4>
+        <a class="c1" href="yournamehindi.html">Hindi Dub</a>
+        <br>
+        <a class="c1" href="yournameeng.html">English Dub</a>
+      </div>
+    </td>
+
+    <td>
+      <div style="text-align: center;">
+        <img class="img" src="images (40) (3).jpeg" alt="The God Of Highschool" height="170"><br>
+        <h4>The God Of Highschool</h4>
+        <a class="c1" href="TGOH.html">English Sub</a>
+        <br>
+        <pre></pre>
+        <br>
+        
+      </div>
+    </td>
+  </tr>
+</table>
 </body>
 
 </html>
