--- a/TGOH.html
+++ b/TGOH.html
@@ -5,14 +5,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
-  <title></title>
+  <title>The Gods Of Highschool  - Watch And Enjoy</title>
 </head>
 
 <body>
   <br>
+  <h2 style="padding-left: 10px ;"> Season 1</h2>
   <ul>
     <li>
 <a class="c1" style="text-decoration: none; font-size: 20px; margin-left: 0px;" href="TGOH1.html">Ep1</a>
+</li>
+<br>
+<li>
+  
+  <a class="c1" 
+  style="text-decoration: none; font-size: 20px; margin-left: 0px;"
+href="TGOH2.html">Ep 2</a>
+</li>
+<br>
+<li>
+  <a class="c1" style="text-decoration: none; font-size: 20px; margin-left: 0px;" href="TGOH3.html">Ep 3</a>
 </li>
 </ul>
 </body>
