--- a/anime.html
+++ b/anime.html
@@ -65,8 +65,8 @@
     <div class="anime-item">
       <img class="img" src="images (36) (1).jpeg" alt="Attack on Titan"><br>
       <h4>Attack on Titan</h4>
-      <a class="c1" href="aothindi.html">Hindi Dub</a><br>
-      <a class="c1" href="aoteng.html">English Sub</a>
+      <a class="c1" href="AOThindi.html">Hindi Dub</a><br>
+      <a class="c1" href="AOTeng.html">English Sub</a>
     </div>
   </div>
 
