--- a/anime.html
+++ b/anime.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="icon" type="image/png" href="AniRate Logo on Bold Black Backdrop.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Anime - Hindi and English Dub</title>
