--- a/TGOH2.html
+++ b/TGOH2.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" type="image/png" href="AniRate Logo on Bold Black Backdrop.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>The God Of highschool - EP2 S1</title>
   <link rel="stylesheet" href="style.css">
