--- a/anime.html
+++ b/anime.html
@@ -41,7 +41,7 @@
   <div id="nevbar">
     <img id="AniRate" src="1000008316_prev_ui.png" alt="AniRate" height="50">
     <pre>  </pre>
-    <a class="xyz" href="animemovie.html">Anime</a>
+    <a class="xyz" href="anime.html">Anime</a>
     <a class="xyz" href="index.html">Home</a>
   </div>
 
