--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" type="image/png" href="AniRate Logo on Bold Black Backdrop.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
@@ -19,6 +18,7 @@
   <meta name="twitter:title" content="AniRate - Watch Anime Now">
   <meta name="twitter:description" content="Stream trending anime episodes online, right from your browser.">
   <meta name="twitter:image" content="https://nafi-web-dev.github.io/AniRate/cover-image.jpg">
+  <link rel="icon" type="image/png" href="AniRate Logo on Bold Black Backdrop.png">
 
   <link rel="stylesheet" href="style.css">
   <title>AniRate - Watch Anime Now</title>
@@ -35,7 +35,14 @@
     </div>  
     
 <hr class="hr">
-  <h4>Trending now 🔥</h4>
+<br>
+  <h4 style="display: inline;">Trending now 🔥</h4
+  > 
+  <a class="bu1"  href="signup.html">
+    <button class="sig1">
+      Login
+    </button>
+  </a>
   <table class="name">
     <tr>
       <td><img class="img" src="bx21-ELSYx3yMPcKM.jpg" alt="One Piece" height="170" loading="lazy"></td>
