--- a/anime.html
+++ b/anime.html
@@ -2,7 +2,6 @@
 <html>
 
 <head>
-  <link rel="icon" type="image/png" href="AniRate Logo on Bold Black Backdrop.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Anime - Hindi and English Dub</title>
@@ -12,7 +11,7 @@
     .anime-container {
       display: flex;               /* Use flexbox layout */
       justify-content: space-around; /* Space images evenly */
-      align-items: center;         /* Center the images vertically */
+              /* Center the images vertically */
       flex-wrap: wrap;             /* Allow images to wrap on smaller screens */
       margin-top: 20px;            /* Add some space above */
     }
@@ -35,13 +34,14 @@
       transition: transform 0.3s;   /* Smooth transition */
     }
   </style>
+  <link rel="icon" type="image/png" href="AniRate Logo on Bold Black Backdrop.png">
 </head>
 
 <body>
   <div id="nevbar">
     <img id="AniRate" src="1000008316_prev_ui.png" alt="AniRate" height="50">
     <pre>  </pre>
-    <a class="xyz" href="anime.html">Anime</a>
+    <a class="xyz" href="animemovie.html">Anime</a>
     <a class="xyz" href="index.html">Home</a>
   </div>
 
@@ -68,6 +68,12 @@
       <h4>Attack on Titan</h4>
       <a class="c1" href="AOThindi.html">Hindi Dub</a><br>
       <a class="c1" href="AOTeng.html">English Sub</a>
+    </div>
+    <div class="anime-item">
+      <img class="img" src="images (40) (4).jpeg" alt="Black Clover"><br>
+      <h4>Black Clover</h4>
+      <a class="c1" href="blackcloverhin.html">Hindi Dub</a><br>
+      
     </div>
   </div>
 
