--- a/blackcloverhin.html
+++ b/blackcloverhin.html
@@ -18,7 +18,11 @@
   <a href="Blacovep3.html" class="c1" style="text-decoration: none; font-size: 20px; margin-left: 5px; ">Ep 3</a>
   <br> <br>
   <a href="Blacovep4.html" class="c1" style="text-decoration: none; font-size: 20px; margin-left: 5px; " > Ep 4</a>
+  <br> <br>
+  <a href="Blacovep5.html" class="c1" style="text-decoration: none; font-size: 20px; margin-left: 5px; " > Ep 5</a>
   
+  <br> <br>
+  <a href="Blacovep6.html" class="c1" style="text-decoration: none; font-size: 20px; margin-left: 5px; " > Ep 6</a>
 </body>
 
 </html>
