--- a/blackcloverhin.html
+++ b/blackcloverhin.html
@@ -23,6 +23,12 @@
   
   <br> <br>
   <a href="Blacovep6.html" class="c1" style="text-decoration: none; font-size: 20px; margin-left: 5px; " > Ep 6</a>
+  
+  <br> <br>
+  <a href="Blacovep7.html" class="c1" style="text-decoration: none; font-size: 20px; margin-left: 5px; " > Ep 7</a>
+  
+  <br> <br>
+  <a href="Blacovep8.html" class="c1" style="text-decoration: none; font-size: 20px; margin-left: 5px; " > Ep 8</a>    
 </body>
 
 </html>
