--- a/blackcloverhin.html
+++ b/blackcloverhin.html
@@ -23,12 +23,11 @@
   
   <br> <br>
   <a href="Blacovep6.html" class="c1" style="text-decoration: none; font-size: 20px; margin-left: 5px; " > Ep 6</a>
+  <br>
+  <br>
   
-  <br> <br>
-  <a href="Blacovep7.html" class="c1" style="text-decoration: none; font-size: 20px; margin-left: 5px; " > Ep 7</a>
-  
-  <br> <br>
-  <a href="Blacovep8.html" class="c1" style="text-decoration: none; font-size: 20px; margin-left: 5px; " > Ep 8</a>    
+  <h3 style="padding-left: 5px;">Watch All Episode in our Telegram 👇</h3>
+  <a style="text-decoration: none; font-size: 18px; margin-left: 5px; " class="c1" href="https://t.me/BlackCloverHindiDubAnirate">Black Clover All Episode in Hindi</a>
 </body>
 
 </html>
