--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
     
 <hr class="hr">
 <br>
-  <h4 style="display: inline;">Trending now 🔥</h4
+  <h4 style="display: inline; padding-left: 5px; ">Trending now 🔥</h4
   > 
- 
+
   <table class="name">
+   
     <tr>
       <td><img class="img" src="bx21-ELSYx3yMPcKM.jpg" alt="One Piece" height="170px" loading="lazy"></td>
 <td><img class="img" src="bx180367-GlRuB2lG7Kaa.jpg" alt="Witch Watch" height="170" loading="lazy"></td>
@@ -70,7 +71,7 @@
   </table>
 
   <hr>
-  <h4>Upcoming Anime</h4>
+  <h4 style="padding-left: 5px;">Upcoming Anime</h4>
 
   <table class="name" >
     <tr>
@@ -87,7 +88,7 @@
   </table>
 
   <hr>
-  <h4>Top 10 anime (sorted by popularity)</h4>
+  <h4 style="padding-left: 5px;">Top 10 anime (sorted by popularity)</h4>
   <div id="a1">
   <a class="c1" id="more2" href="more.html">more</a>
   </div>
